# piptools-sync

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  Dockerfile  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py  tasks.py  tox.ini
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: codeql-analysis.yml  tests.yml
docs/: conf.py  example.ipynb
examples/: example_01.py
requirements/: base.txt  development.in  development.txt  production.txt  test.in  test.txt
src/piptools_sync/: __init__.py  config.ini  config.json  config.toml  mapping.json  piptools_sync.py  piptools_sync_cli.py  tryout.py
tests/: __init__.py  conftest.py  mapping.json  req.txt  test.yaml  test__utility_find_file_path.py  test__utility_remove_vee.py  test_find_requirements_file.py  test_find_yaml_config_file.py  test_generate_db.py  test_get_installed_version.py  test_get_precommit_repos.py  test_get_requirement_versions.py  test_piptools_sync.py  test_piptools_sync_cli.py  test_update_yaml.py  test_yaml_to_dict.py
