# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html?highlight=package_data
[metadata]
name = piptools_sync
version = attr: piptools_sync.__version__
author = Stephen R A King
author_email = sking.github@gmail.com
maintainer = Stephen R A King
maintainer_email = sking.github@gmail.com
description = A piptools pre-commit version sync utility
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pre-commit-hooks,version-sync,pip-tools,pre-commit,dependency-manager
platforms = Any
url = https://github.com/Stephen-RA-King/piptools-sync
download_url = https://github.com/Stephen-RA-King/piptools_sync/archive/refs/heads/main.zip
license = MIT
license_files = LICENSE
project_urls =
    documentation = https://piptools-sync.readthedocs.io/en/latest/
    Release Notes = https://github.com/Stephen-RA-King/piptools_sync/releases
    Source Code = https://github.com/Stephen-RA-King/piptools_sync/
    Issue Tracker = https://github.com/Stephen-RA-King/piptools_sync/issues


# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir=
    =src
packages=find:
include_package_data = True
python_requires = >=3.8
install_requires =
    aiohttp>=3.8.4
    click>=8.1.3
    gitpython>=3.1.31
    pyyaml>=6.0
    requests>=2.28.2
    toml>=0.10.2
    tqdm>=4.64.1


[options.packages.find]
where=src

[options.package_data]
piptools_sync =
    config.toml
    mapping.json


[options.entry_points]
console_scripts =
    piptools_sync = piptools_sync.piptools_sync:main


[flake8]
# https://flake8.pycqa.org/en/latest/user/options.html
# flake8 -                F401-F901
# flake8-comprehensions - C400-C416
# flake8-bugbear -        B001-B018, B901-B950
# flake8-docstrings -     D100-D418 (flake8 plugin for pydocstyle)
# pycodestyle -           E101-E902, W191-W606
# pep8-naming -           N801-N818
docstring-convention = numpy
max-complexity = 18
max-line-length = 88
select = B, B9, C, D, E, F, N, W
exclude = tests/*,.tox/*,.nox/*,docs/*,.git/*,.github/*
ignore =
    # pycodestyle - whitespace before ‘,’, ‘;’, or ‘:’ - to be compatible with black
    E203,
    # pycodestyle - line break before binary operator
    W503,
    B907,
    D103
per-file-ignores =
    # flake8 - module imported but not used
    __init__.py:F401
    pathmagic.py:F401
    test_piptools_sync.py:F401
